- 
    Bug 
- 
    Resolution: Done
- 
    P2: Important 
- 
    4.8.5, 5.4.0, 5.9
- 
    Windows 8
- 
        9e99dba4a22bbf212b3e6d1e2607a16dbbd04d90
Glyph in Private Use Areas(EUDC) are not shown.
EUDC: End User Defined Characters
Only "System", "Terminal" and "FixedSys" fonts can show EUDC correctly.
but "MS Gothic" or others can not.
how to reproduce
1. Register EUDC glyph
Run eudcedit.exe and edit U+E000 in Unicode or F040 in ShiftJIS.
2. run attached source code.
"System" and "Terminal" fonts can show EUDC correctly.
but "MS Gothic" can not.
- duplicates
- 
                    QTBUG-26462 EUDC characters shown as a unfilled square with Qt 4.x -         
- Closed
 
-         
- relates to
- 
                    QTBUG-103003 [Windows] Warning - Unable to open default EUDC font: "EUDC.TTE" -         
- Closed
 
-         
- resulted in
- 
                    PYSIDE-1620 qt.qpa.fonts: Unable to open default EUDC font: "C:\\WINDOWS\\FONTS\\EUDC.TTE" -           
- Closed
 
-         
| For Gerrit Dashboard: QTBUG-44594 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 214041,5 | Windows: Add font fallback for EUDC glyphs | dev | qt/qtbase | Status: MERGED | +2 | 0 | 
| 214283,2 | Windows: Support application fonts as fallbacks | dev | qt/qtbase | Status: MERGED | +2 | 0 |