src/platformsupport/fontdatabases/windows/qwindowsfontdatabase_p.h
@@ -134,6 +134,7 @@ public:
 
 private:
     void removeApplicationFonts();
+    void addDefaultEUDCFont();
 
     struct WinApplicationFont {
         HANDLE handle;
@@ -150,6 +151,7 @@ private:
     QMap<QString, UniqueFontData> m_uniqueFontData;
 
     static unsigned m_fontOptions;
+    QStringList m_eudcFonts;
 };
 
 #ifndef QT_NO_DEBUG_STREAM
